# Openspm

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  USAGE.md  conanfile.txt  main.cpp  mirrors.txt  openspm-config.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-and-release.yml  dev-build.yml  release-build.yml  windows-build.yml
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Doxyfile  Makefile  cmake_install.cmake  openspm
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  openspm_tests
build-test/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build-test/Testing/Temporary/: CTestCostData.txt
build-test/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/: pkg-list.yaml  repository.yaml
examples/package/: install.sh  pkg.yaml
examples/repository/: index.yml  repository.yml
include/: archive.hpp  config.hpp  global.h  logger.hpp  mirrorStore.hpp  openspm-frontend.hpp  openspm_cli.hpp  package_info.h  package_manager.hpp  repository_manager.hpp  repository_store.hpp  runtimeConfig.hpp  utils.hpp
src/: archive.cpp  config.cpp  frontend.cpp  global.cpp  logger.cpp  openspm_cli.cpp  package_info.cpp  package_manager.cpp  repository_manager.cpp  repository_store.cpp  utils.cpp
tests/: CMakeLists.txt  test_addrepo.cpp
